Note JS metrics are now stable (as of 1.8.0)
https://github.com/open-telemetry/opentelemetry-js/releases/tag/v1.8.0

--- a/data/instrumentation.yaml
+++ b/data/instrumentation.yaml
@@ -51,7 +51,7 @@ languages:
     name: JavaScript
     status:
       traces: stable
-      metrics: Release Candidate
+      metrics: stable
       logs: Development
   rust:
     name: Rust
